include memoryDB for future tests

--- a/ShortUrl/ShortURL.Api/appsettings.json
+++ b/ShortUrl/ShortURL.Api/appsettings.json
@@ -5,6 +5,7 @@
     }
   },
   "AllowedHosts": "*",
+  "UseMemoryDB":  true,
   "DefaultConnection": "server=127.0.0.1;uid=root;pwd=;database=short_url",
   "ShortUrlCodeLength": 4,
   "NotFoundRedirectURL":  "https://google.com.br/w"
