receiving requests from localhost front-end

--- a/ShortUrl/ShortURL.Api/appsettings.json
+++ b/ShortUrl/ShortURL.Api/appsettings.json
@@ -1,12 +1,23 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug"
     }
   },
   "AllowedHosts": "*",
-  "UseMemoryDB":  true,
+  "UseMemoryDB": true,
   "DefaultConnection": "server=127.0.0.1;uid=root;pwd=;database=short_url",
   "ShortUrlCodeLength": 4,
-  "NotFoundRedirectURL":  "https://google.com.br/w"
+  "NotFoundRedirectURL": "https://google.com.br/w",
+
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5000"
+      },
+      "HttpsDefaultCert": {
+        "Url": "https://0.0.0.0:5001"
+      }
+    }
+  }
 }
