--- a/ShortUrl/ShortURL.Api/appsettings.json
+++ b/ShortUrl/ShortURL.Api/appsettings.json
@@ -8,7 +8,9 @@
   "UseMemoryDB": true,
   "DefaultConnection": "server=127.0.0.1;uid=root;pwd=;database=short_url",
   "ShortUrlCodeLength": 4,
-  "NotFoundRedirectURL": "https://google.com.br/w",
+  "NotFoundRedirectURL": "http://localhost:4200/not-found",
+  "NotFoundRedirectIncludeCode": true,
+  "ForceHttpsLink": true,
 
   "Kestrel": {
     "EndPoints": {
