click count and user history

--- a/ShortUrl/ShortURL.Api/appsettings.json
+++ b/ShortUrl/ShortURL.Api/appsettings.json
@@ -5,12 +5,12 @@
     }
   },
   "AllowedHosts": "*",
-  "UseMemoryDB": true,
+  "UseMemoryDB": false,
   "DefaultConnection": "server=127.0.0.1;uid=root;pwd=;database=short_url",
   "ShortUrlCodeLength": 4,
   "NotFoundRedirectURL": "http://localhost:4200/not-found",
   "NotFoundRedirectIncludeCode": true,
-  "ForceHttpsLink": true,
+  "ForceHttpsLink": false,
 
   "Kestrel": {
     "EndPoints": {
