--- a/ShortUrl/ShortURL.Test/ShortURL.Test.csproj
+++ b/ShortUrl/ShortURL.Test/ShortURL.Test.csproj
@@ -8,9 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ShortURL.Api\ShortURL.Api.csproj" />
   </ItemGroup>
 
 </Project>
